Fix horizontal scroll on slack schedule

--- a/app/assets/stylesheets/live/layout.sass
+++ b/app/assets/stylesheets/live/layout.sass
@@ -172,6 +172,7 @@ body
   display: flex
   flex-flow: column nowrap
   color: #333
+  overflow-x: hidden
   overflow-y: auto
   border-radius: 0 0 5px 5px
 
